<resources>
    <string name="app_name">I2P</string>
    <string name="drag_and_drop">DRAG AND DROP</string>
    <string name="done_button">Done</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="gallery_button">Gallery</string>
    <string name="camera_button">Camera</string>
    <string name="pdf_generation">PDF GENERATION</string>
    <string name="adjust_order_button">Adjust Order</string>
    <string name="generate_button">Generate</string>
    <string name="hint_edit_text">Enter PDF file name</string>
    <string name="save_pdf_button">Save PDF</string>
    <string name="remove_button">remove</string>
</resources>