<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:fontFamily="@android:fontFamily"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/galleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewTitle"
        android:layout_marginRight="16dp"
        android:text="@string/gallery_button"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="12dp"/>

    <Button
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_below="@id/textViewTitle"
        android:text="@string/camera_button"
        android:layout_toRightOf="@id/galleryButton"
        android:layout_marginRight="16dp"/>

    <Button
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/cameraButton"
        android:layout_below="@id/textViewTitle"
        android:text="@string/done_button"
        android:layout_marginTop="32dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewImages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/galleryButton"
        android:layout_marginTop="32dp" />

</RelativeLayout>
